--- a/Analysis_of_Weather_Events_1950-2011.html
+++ b/Analysis_of_Weather_Events_1950-2011.html
@@ -382,8 +382,9 @@ barplot(height=df6$TOTAL_DAMAGE[1:5]/1e9, names.arg=df6$EVTYPE[1:5],
 <p><strong>With respect to the impact on the economy goes, flood have by far the most economic impact and droughts have by far the most impact specifically on crops.</strong> Floods have caused a total of $150.3 billion USD in total damage (property and crop) which accounts for 31.6% of total damage caused by all recorded weather events. Droughts have caused a total of $14.0 billion USD in crop damage which accounts for 28.5% of crop damage caused by all recorded weather events.</p>
 <div id="limitations-of-this-analysis" class="section level2">
 <h2>Limitations of this analysis</h2>
-<p>Possibly the single biggest limitation with this analysis is that it does not in any way account for changes over time. It is conceivable that certain event types may change character over the years which in turn could change how harmful they are.</p>
-<p>Another limitation is that this analysis did not attempt to search for outliers (e.g. particularly large hurricanes, etc). Future work should be completed to see if any of the results are skewed by just a few particularly bad weather events.</p>
+<p>It is known that some similar (or even identical) event types are given different names and should be combined, eg EXCESSIVE HEAT and HEAT should both be called “HEAT”. It is unknown have big of an impact this has on the analysis but is potentially very large and should be addressed as soon as possible.</p>
+<p>Another limitatiion is that this analysis does not in any way account for changes over time. It is conceivable that certain event types may change character over the years which in turn could change how harmful they are.</p>
+<p>Finally, note that this analysis did not attempt to search for outliers (e.g. particularly large hurricanes, etc). Future work should be completed to see if any of the results are skewed by just a few particularly bad weather events.</p>
 </div>
 </div>
 
